@@ -63,6 +63,8 @@ done:
   x.tm_wday=x.tm_yday=x.tm_isdst=0;
 #if defined(__dietlibc__) || defined(__GLIBC__)
   *t=timegm(&x);
+#elif defined(__MINGW32__)
+  *t=mktime(&x);
 #else
   {
 #ifdef sgi
