@@ -3,6 +3,7 @@
 #include <unistd.h>
 #include <stdio.h>
 #include <sys/uio.h>
+#include "ndelay.h"
 
 int main(int argc,char* argv[]) {
   int s=socket_tcp4();
